[package]
name = "bevy_3dtiles"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
bevy = {version = "0.5.0", features = ["dynamic"]}
byteorder = "1.4.3"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"

[patch.crates-io]
bevy = { path = "../bevy" }
