[package]
name = "tiles3d-viewer"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

[dependencies]
tiles3d = {path = "../3d-tiles"}
byteorder = "1.4.3"
serde = "1.0.125"
serde_json = "1.0.64"
anyhow = "1.0.40"
argh = "0.1.4"
# We need a patched shader for supporting GLTFs without UVs
bevy = { version = "0.5.0", features = ["dynamic"], git = "https://github.com/pka/bevy.git", branch = "pbr-optional-uv" }
