[package]
name = "tiles3d-viewer"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

[dependencies]
tiles3d = {path = "../3d-tiles"}
byteorder = "1.4.3"
serde = "1.0.125"
serde_json = "1.0.64"
anyhow = "1.0.40"
argh = "0.1.4"
notify = "=5.0.0-pre.10" # compatible version for bevy_asset
bevy = { version = "0.5.0", features = ["dynamic"] }
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras.git" }
bevy-inspector-egui = "0.6.1"
tempfile = "3.2.0"
bevy_prototype_debug_lines = "0.3.3"
